Refactorizando metodos y entidad Vaccine